<resources>
    <string name="app_name">Covid-19 Tracker</string>
    <string name="action_settings">Configurações</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!--  Sign up information  -->
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="first_name">Primeiro nome:</string>
    <string name="last_name">Sobrenome:</string>
    <string name="email">Email:</string>
    <string name="birth_year">Ano de nascimento:</string>
    <string name="sign_up_button">Cadastrar</string>
    <string name="signUpErrorMessage">este campo deve ser preenchido!</string>
    <string name="sign_out">Sair</string>
    <string name="type_address">Tipo de Residência:</string>
    <string name="zip_code">CEP:</string>
    <string name="city">Cidade:</string>
    <string name="state">Estado:</string>
    <string name="contry">País</string>
    <string name="signUp">Ok</string>
    <string-array name="address_type_array">
        <item>Casa</item>
        <item>Apartamento</item>
        <item>Outro</item>
    </string-array>

    <string name="fine_location_permission_rationale">The fine location permission is needed for core functionality.</string>
    <string name="fine_permission_denied_explanation">Fine location permission was denied, but is needed for core functionality.</string>

    <string name="background_location_permission_rationale">The background location permission is needed for enhanced functionality.</string>
    <string name="background_permission_denied_explanation">Background location permission was denied but needed for enhanced functionality.</string>


    <string name="settings">Settings</string>
    <string name="ok">OK</string>

    <string name="fine_location_access_rationale_title_text">Welcome to the Covid Tracker App!</string>

    <string name="fine_location_access_rationale_details_text">This sample allows you to receive location updates while using the app.
        \n\n
        In order for this feature to work, please approve access to your location via the button below.
    </string>

    <string name="background_location_access_rationale_title_text">Improve location accuracy!</string>

    <string name="background_location_access_rationale_details_text">
        Dev Tip: Unless you have a valid use case for background location updates, you should instead only request updates while your app is in the foreground (app/foreground service).
        \n\n
        For this app, you would explain why the particular use case requires background location updates and direct user to click \"Allow all the time\" below.
        \n\n
    </string>


    <string name="enable_fine_location_button_text">Approve Location Access</string>
    <string name="enable_background_location_button_text">Approve Background Location Access</string>

    <string name="start_receiving_location">Start Receiving Location Updates</string>
    <string name="stop_receiving_location">Stop Receiving Location Updates</string>

    <string name="enhance_with_background_location_button_text">Enhance with Background Location</string>

    <!-- NEW ones -->
    <string name="request_updates">Request updates</string>
    <string name="remove_updates">Remove updates</string>
    <string name="unknown_location">Unknown location</string>

    <string name="batched_location_updates">Batched location updates</string>
    <string name="emptyLocationDatabaseMessage">To start receiving location updates, please click the button below!</string>
    <string name="confirm_button">Confirmar</string>

    <!-- Health State information -->
    <string name="showed_symptoms_switch">Apresentou Sintomas</string>
    <string name="form">Formulário</string>
    <string name="start_symptoms_text">Data de início dos sintomas</string>
    <string name="met_infected_switch">Entrou em contato com uma pessoa infectada</string>
    <string name="met_infected_text">Data em que encontrou a pessoa infectada</string>
    <string name="positive_diagnose_switch">Recebeu diagnótico positivo</string>
    <string name="cured_switch">Está curado</string>
    <string name="diagnose_date_text">Data do diagnóstico</string>
    <string name="non_null_field">Este campo deve ser preenchido!</string>

    <string name="default_notification_channel_id">default_channel</string>
    <string name="app_information_body">
        Para que este aplicativo forneça informações mais confiáveis, é necessário que você gere notificações de sua saúde.
        Caso apresente algum sintoma, tenha recebido diagnóstico positivo, ou já tenha se curado, não deixe de registrar. Para isso, clique
        no ícone informações de saúde no menu inicial.\n\n

        Neste aplicativo, você poderá acompanhar suas localizações passadas, para isso clique no ícone de "minhas localizações"
        no menu inicial e habilite a geolocalização para captação de informações. Você poderá visualizar no mapa as últimas
        regiões que visitou. Caso tenha ficado próximo a uma pessoa infectada, você receberá uma notificação para que possa tomar as
        medidas necessárias. \n\n

        No seu perfil, acessível a partir da página inicial, você poderá editar suas informações de cadastro.\n\n
    </string>
    <string name="covid19_information">
        \u2022 Sintomas mais comuns:\n
        \u2022 febre\n
        \u2022 tosse seca\n
        \u2022 cansaço\n\n
        \u2022 Sintomas menos comuns:\n
        \u2022 dores e desconfortos\n
        \u2022 dor de garganta\n
        \u2022 diarreia\n
        \u2022 conjuntivite\n
        \u2022 dor de cabeça\n
        \u2022 perda de paladar ou olfato\n
        \u2022 erupção cutânea na pele ou descoloração dos dedos das mãos ou dos pés\n
        \u2022 Sintomas graves:\n\n
        \u2022 dificuldade de respirar ou falta de ar\n
        \u2022 dor ou pressão no peito\n
        \u2022 perda de fala ou movimento\n\n
        \u2022 Procure atendimento médico imediato se tiver sintomas graves. Sempre ligue antes de ir ao médico ou posto de saúde,
        clínicas ou hospitais.\n
        \u2022 Pessoas saudáveis que apresentarem os sintomas leves devem acompanhar seus sintomas em casa.\n
        \u2022 Em média, os sintomas aparecem após 5 ou 6 dias depois de ser infectado com o vírus. Porém, isso pode levar até 14 dias.\n
    </string>
    <string name="alert_message">
        Você possivelmente entrou em contato com uma pessoa infectada.\n
        Fique em alerta nos próximos dias para o surgimento de quaisquer sintomas como febre, dor de cabeça, cansaço, falta de ar.
        Para mais informações consulte o ícone de informações no menu inicial.\n
        Não deixe de notificar seus sintomas nos próximos dias no app, isso nos ajudará a enviar informações mais precisas aos nossos usuários.\n

    </string>
    <string name="alert_title">Alerta!</string>
</resources>
